# profinet

./: .gitignore  CLAUDE.md  使用说明.md
.claude/: settings.local.json
.claude/skills/: doc-generate.md
docs/: PLC接口对接文档.html  PLC接口对接文档.md  修改计划.md  机器人控制器修改计划.md  系统架构图.mmd  系统架构图.txt  系统架构文档.html  系统架构文档.md
docs/mermaid/: 01_架构总览.md  02_启动时序.md  03_数据流.md  04_PLCFrame协议.md
p-net-1.0.2-Linux-aarch64/cmake/: OsalConfig.cmake  OsalTargets-relwithdebinfo.cmake  OsalTargets.cmake  PNetConfig-relwithdebinfo.cmake  PNetConfig.cmake
p-net-1.0.2-Linux-aarch64/include/: pnet_export.h  pnet_options.h  pnet_version.h
p-net-1.0.2-samples/: CMakeLists.txt  CMakePresets.json  kill_pn_dev.sh
p-net-1.0.2-samples/cmake/: Linux.cmake  STM32Cube.cmake  aarch64-linux-gnu.cmake  iMX8MM.cmake  rt-kernel.cmake
p-net-1.0.2-samples/pn_dev/: CMakeLists.txt  GSDML-V2.43-RT-Labs-P-Net-Sample-App-20240530.xml  app_data.c  app_data.h  app_gsdml.c  app_gsdml.h
p-net-1.0.2-samples/ports/linux/: sampleapp_main.c
p-net-public-v1.0.2/: CMakeLists.txt
